Create template class