@@ -1,9 +1,23 @@
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+///usr/bin/env java -cp deps/* --enable-preview --source 25 "$0" "$@" ; exit $?
 
-
-Logger log = LoggerFactory.getLogger(this.getClass());
+import com.fasterxml.jackson.jr.ob.JSON;
 
 void main(String[] args) throws Exception {
-    log.info("Hello World");
+    IO.println("Hello World!");
+    for (var arg : args) {
+        IO.println("Arg: %s".formatted(arg));
+    }
+
+    // Jackson Jr example
+    var person = new Person("Alice", 30);
+    
+    // Serialize to JSON
+    String json = JSON.std.asString(person);
+    IO.println("JSON: " + json);
+    
+    // Deserialize from JSON
+    Person parsed = JSON.std.beanFrom(Person.class, json);
+    IO.println("Parsed: " + parsed.name() + ", age " + parsed.age());
 }
+
+record Person(String name, int age) {}
